--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
             <br><br><br>
             <p class="card-text"><small class="text-body-secondary">We are excited to see you</small></p>
             
-            <a href="#contact" class="btn btn-primary">Book an apointment</a>
+            <a href="#contact" class="btn btn-primary">Book an appogitintment</a>
           </div>
         </div>
         <div class="card m-2 border-start rounded">
@@ -261,7 +261,7 @@
             </p>
             <br><br><br>
             <p class="card-text"><small class="text-body-secondary">We are excited to see you</small></p>
-            <a href="#contact" class="btn btn-primary">Book an apointment</a>
+            <a href="#contact" class="btn btn-primary">Book an appointment</a>
           </div>
         </div>
         <div class="card m-2 border-start rounded-start">
@@ -272,7 +272,7 @@
               Those precious early weeks are filled with tender moments, tiny toes, and sweet smiles that you will want to remember forever. We understand the importance of capturing these cherished memories, and we are here to offer you our exceptional newborn shoot services.
             </p>
             <p class="card-text"><small class="text-body-secondary">We are excited to see you</small></p>
-            <a href="#contact" class="btn btn-primary">Book an apointment</a>
+            <a href="#contact" class="btn btn-primary">Book an appointment</a>
           </div>
         </div>
       </div>
