--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
    <div class="container shadow w-50 border-top">
 <!-- Wrapper container -->
 <div class="container py-4">
-  <h5>For apointment please fill out this form</h5>
+  <h5>For appointment please fill out this form</h5>
 
   <!-- Bootstrap 5 starter form -->
   <form id="contactForm" data-sb-form-api-token="API_TOKEN">
